--- a/app/views/device_templates/_device_reviews.html.erb
+++ b/app/views/device_templates/_device_reviews.html.erb
@@ -28,7 +28,7 @@
     <div class="card-footer">
       <div class="collapse" id="device_reviews_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "device_templates/device_reviews_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
