Implement image uploads

--- a/app/views/device_templates/index.html.erb
+++ b/app/views/device_templates/index.html.erb
@@ -72,7 +72,7 @@
 
         <!-- Display device.photo start -->
         <td>
-          <%= device.photo %>
+          <img src='<%= device.photo %>' class='img-fluid'>
         </td>
         <!-- Display device.photo end -->
 
