--- a/app/views/device_templates/show.html.erb
+++ b/app/views/device_templates/show.html.erb
@@ -43,7 +43,7 @@
       </dt>
       <!-- Display photo start -->
       <dd>
-        <%= @device.photo %>
+        <img src="<%= @device.photo %>" class="img-fluid">
       </dd>
       <!-- Display photo end -->
 
