--- a/app/views/category_templates/_category_devices_new_form.html.erb
+++ b/app/views/category_templates/_category_devices_new_form.html.erb
@@ -1,5 +1,5 @@
 <!-- Form device start -->
-<form action="/create_device_from_category" method="post">
+<form action="/create_device" method="post" enctype="multipart/form-data">
 <!-- Form device end -->
 
   <!-- Label and input for description start -->
@@ -21,7 +21,7 @@
     </label>
 
     <!-- Input for photo start -->
-    <input type="text" id="photo" name="photo" class="form-control" value="<%= @device.photo %>">
+    <input type="file" id="photo" name="photo" class="form-control">
     <!-- Input for photo end -->
   </div>
   <!-- Label and input for photo end -->
