Replace raw foreign key value in reviews with primary descriptors

--- a/app/views/review_templates/index.html.erb
+++ b/app/views/review_templates/index.html.erb
@@ -84,7 +84,7 @@
 
         <!-- Display review.commenter_id start -->
         <td>
-          <%= review.commenter_id %>
+          <%= review.commenter.email %>
         </td>
         <!-- Display review.commenter_id end -->
 
