Replace raw foreign key value in devices with primary descriptors

--- a/app/views/device_templates/index.html.erb
+++ b/app/views/device_templates/index.html.erb
@@ -78,7 +78,7 @@
 
         <!-- Display device.company_id start -->
         <td>
-          <%= device.company_id %>
+          <%= device.company.description %>
         </td>
         <!-- Display device.company_id end -->
 
