Replace raw foreign key value in reviews with primary descriptors

--- a/app/views/review_templates/index.html.erb
+++ b/app/views/review_templates/index.html.erb
@@ -78,7 +78,7 @@
 
         <!-- Display review.device_id start -->
         <td>
-          <%= review.device_id %>
+          <%= review.device.description %>
         </td>
         <!-- Display review.device_id end -->
 
