Replace raw foreign key value in devices with primary descriptors

--- a/app/views/device_templates/index.html.erb
+++ b/app/views/device_templates/index.html.erb
@@ -84,7 +84,7 @@
 
         <!-- Display device.category_id start -->
         <td>
-          <%= device.category_id %>
+          <%= device.category.description %>
         </td>
         <!-- Display device.category_id end -->
 
